# time-mcp-server

./: .gitignore  LICENSE  README.md  Taskfile.yml  pyproject.toml
src/time_mcp_server/: __init__.py  main.py  server.py  tools.py
tests/: __init__.py  test_client.py
